# parley

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
evals/fundamentals/: __init__.py  grounding.py
evals/technicals/: __init__.py  grounding.py
notes/: ai-free-day-1.md  eval-design.md  patterns.md  supervisor-design.md  synthesis-eval-research.md  universe.md  week-1-retro.md
scripts/: run_fundamentals_grounding_eval.py  run_technicals_grounding_eval.py
src/: supervisor.py  synthesis.py
src/agents/: _helpers.py  fundamentals_specialist.py  single_agent.py  technicals_specialist.py
src/data/: fetch_prices.py  fundamentals.py  technicals.py
src/evals/: __init__.py  base.py  judge.py
src/mcp_servers/: fundamentals_server.py  technicals_server.py
src/schemas/: __init__.py  fundamentals.py  signal.py  technicals.py  tools.py
tests/: test_technicals.py
tests/evals/: test_fundamentals_grounding.py  test_technicals_grounding.py
