[project]
name = "parley"
version = "0.1.0"
description = "Multi-agent equities trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.27.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
